# frozenight

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  build-artifacts.sh  trainer.py
engine/: Cargo.toml
engine/src/: lib.rs  time.rs
engine/src/eval/: eval.rs  eval_consts.rs  eval_set.rs  mob.rs  mod.rs  phased_eval.rs  pst.rs  trace.rs
engine/src/search/: cache.rs  formulas.rs  helpers.rs  history.rs  mod.rs  oracle.rs  search.rs  window.rs
engine/src/search/moves/: mod.rs  partition.rs  see.rs
frozenight/: Cargo.toml  build.rs  model.json  model.json.zst  model.rs
frozenight/src/: eval.rs  lib.rs  nnue.rs  position.rs  search.rs  threading.rs  time.rs  tt.rs
frozenight/src/search/: abdada.rs  negamax.rs  null.rs  oracle.rs  ordering.rs  params.rs  pv.rs  qsearch.rs  see.rs  table.rs  window.rs
frozenight/src/search/ordering/: hh_init.rs
gen-data/: Cargo.toml
gen-data/src/: annotate.rs  filter.rs  games.rs  main.rs  stats.rs
scripts/: build-artifacts.sh  commit-msg.sh  install-hooks.sh  network-tourney.sh  trainer.py
src/: eval.rs  lib.rs  nnue.rs  search.rs
uci/: Cargo.toml  build.rs
uci/src/: bench.rs  convert.rs  main.rs  options.rs
