[workspace]

members = [
    "frozenight",
    "uci",
    "gen-data",
]

[profile.release]
lto = true
panic = "abort"

[patch.crates-io]
cozy-chess = { git = "https://github.com/analog-hors/cozy-chess", rev = "1b1eeb7" }
cozy-chess-types = { git = "https://github.com/analog-hors/cozy-chess", rev = "1b1eeb7" }
