[workspace]

members = [
    "frozenight",
    "uci",
    "gen-data",
]

[profile.release]
lto = true
panic = "abort"

[patch.crates-io]
cozy-chess = { git = "https://github.com/MinusKelvin/cozy-chess", branch = "zobrist-board-copy" }
cozy-chess-types = { git = "https://github.com/MinusKelvin/cozy-chess", branch = "zobrist-board-copy" }
