[package]
name = "frozenight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.7.3", features = ["derive"] }
cozy-chess = "0.3"
cozy-syzygy = { git = "https://github.com/MinusKelvin/cozy-syzygy" }
