[package]
name = "frozenight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tweakable = []

[dependencies]
bytemuck = { version = "1.7.3", features = ["derive"] }
cozy-chess = "0.3"

[build-dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
zstd = "0.11.2"
