[package]
name = "gen-data"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cozy-chess = "0.2.1"
cozy-syzygy = { git = "https://github.com/MinusKelvin/cozy-syzygy.git", branch = "main" }
rand = "0.8.5"
structopt = "0.3.26"
frozenight = { path = "../frozenight" }
once_cell = "1.10.0"
crossbeam-utils = "0.8.7"
