[package]
name = "gen-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cozy-chess = "0.3"
cozy-syzygy = { git = "https://github.com/MinusKelvin/cozy-syzygy.git", rev = "57ed31e" }
marlinformat = { git = "https://github.com/MinusKelvin/marlinflow", rev = "3b63022" }
rand = "0.8.5"
structopt = "0.3.26"
frozenight = { path = "../frozenight" }
once_cell = "1.10.0"
ctrlc = "3.2.1"
bytemuck = "1.12.1"
