[package]
name = "frozenight-uci"
version = "3.0.0-dev"
edition = "2021"
rust-version = "1.57"
default-run = "frozenight-uci"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cozy-chess = "0.2.2"
frozenight = { path = "../frozenight" }
