[package]
name = "frozenight-uci"
version = "7.0.0-dev"
edition = "2021"
rust-version = "1.59"
default-run = "frozenight-uci"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tweakable = ["frozenight/tweakable"]

[dependencies]
cozy-chess = "0.3"
frozenight = { path = "../frozenight" }
